@startuml
skinparam classAttributeIconSize 0

class Customer {
  +id: int
  +full_name: str
  +phone: str
  +id_card: str
  +address: str
  +created_at: datetime
}

class PawnItem {
  +id: int
  +name: str
  +category: str
  +estimated_value: decimal
  +created_at: datetime
}

class User {
  +id: int
  +username: str
  +password_hash: str
  +full_name: str
  +phone: str
  +role: enum(admin, staff)
  +is_active: bool
  +is_deleted: bool
  +last_login: datetime
}

class Transaction {
  +id: int
  +ticket_no: str
  +customer_id: int
  +item_id: int
  +staff_id: int
  +pawn_value: decimal
  +interest_rate: decimal
  +pawn_date: date
  +due_date: date
  +duration_days: int
  +extension_count: int
  +status: enum(active, overdue, extended, redeemed, liquidated)
  +redeem_amount: decimal
  +redeem_date: date
}

class Payment {
  +id: int
  +transaction_id: int
  +staff_id: int
  +amount: decimal
  +payment_type: enum(interest, extension, redeem)
  +payment_date: date
  +note: str
}

Customer "1" -- "0..*" Transaction : "có"
PawnItem "1" -- "0..*" Transaction : "gắn với"
User "1" -- "0..*" Transaction : "lập phiếu"
User "1" -- "0..*" Payment : "thu tiền"
Transaction "1" -- "0..*" Payment : "có nhiều"

@enduml

